--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
  
-    <div class="container_main">
+    <main class="container_main">
       <div class="container_target">
         
         <div class="container_img">
@@ -57,7 +57,7 @@
       <p class="text_2"> Creation of <span class="text-2_style"> Jules Wyvern </span> </p>
        </footer>  
     </div>  
-    </div>   
+    </main>   
 
 
   <!-- <div class="attribution">
